...
            <android.support.design.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/color_gray">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin_top_text"
                    android:background="@color/blue"
                    android:gravity="start"
                    android:shadowColor="@color/colorPrimaryDark"
                    android:text="@string/Book_title"
                    android:textColor="@color/dark_pink"
                    android:textSize="@dimen/text_size"
                    android:textStyle="italic" />

                <ToggleButton
                    android:id="@+id/favorites"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOff="@string/add_to_fav"
                    android:textOn="@string/in_fav"
                    app:layout_anchor="@id/title"
                    app:layout_anchorGravity="bottom|end" />
...
